EN-21323 Fix css for feature flag alert (#6291)
* It wasn't specific enough, and messed up other
  alerts on the page

--- a/frontend/app/styles/screen-dataset-new.scss
+++ b/frontend/app/styles/screen-dataset-new.scss
@@ -25,7 +25,7 @@
     padding: 1rem;
   }
 
-  .alert {
+  .alert-dsmp {
     background-color: $primary-light;
     color: $primary-dark;
     font-size: 1.4em;
